src/objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pre-Send</fullName>
                </value>
                <value>
                    <fullName>Send in Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled / Declined</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Out for Signature</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Signature</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Out for Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Out for Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Form-Filled</fullName>
                </value>
                <value>
                    <fullName>Out for Acceptance</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Acceptance</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sync_Data_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Data Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Trigger_Process_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Data Mapping</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>echosign_dev1__Process_Template__c</columns>
        <columns>echosign_dev1__Data_Mapping_Error__c</columns>
        <columns>echosign_dev1__Data_Mapping_Result__c</columns>
        <columns>echosign_dev1__Trigger_Process_Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>echosign_dev1__Maximum_Expiration_Days</fullName>
        <active>true</active>
        <errorConditionFormula>echosign_dev1__DaysUntilSigningDeadline__c &gt; 180</errorConditionFormula>
        <errorMessage>There is a maximum of 180 days before document expiration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Signing_Deadline_Future</fullName>
        <active>true</active>
        <errorConditionFormula>AND( echosign_dev1__Signing_Deadline__c &lt; TODAY(),  TEXT(echosign_dev1__Status__c) = &quot;Draft&quot; )</errorConditionFormula>
        <errorMessage>The signing deadline date must not be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__WrittenWithoutPosition</fullName>
        <active>true</active>
        <description>Fail validation if we want a written signature, and have position form fields selected.</description>
        <errorConditionFormula>TEXT(echosign_dev1__SignatureType__c)  = &apos;Written Signature&apos; &amp;&amp; echosign_dev1__Authoring__c</errorConditionFormula>
        <errorMessage>Positioning fields and signatures is not possible with a written signature.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Written_Without_Revisions</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
  TEXT(echosign_dev1__SignatureType__c) = &apos;Written Signature&apos;,
  false
)</errorConditionFormula>
        <errorMessage>Suggesting revisions is not possible with a written signature.</errorMessage>
    </validationRules>
</CustomObject>